--- a/requirements.txt
+++ b/requirements.txt
@@ -1,103 +1,20 @@
-apturl==0.5.2
-args==0.1.0
-asn1crypto==0.24.0
-bleach==2.1.2
-Brlapi==0.6.6
-certifi==2018.11.29
-chardet==3.0.4
-click==6.7
-clint==0.5.1
-command-not-found==0.3
-cryptography==2.1.4
-cupshelpers==1.0
-decorator==4.1.2
-defer==1.0.6
-distro-info==0.18
-entrypoints==0.2.3.post1
+Cython==0.25.2
+fastai==1.0.4
 Flask==1.0.2
-floyd-cli==0.11.17
-html5lib==0.999999999
-httplib2==0.9.2
-idna==2.8
-ipykernel==4.8.2
-ipython==5.5.0
-ipython-genutils==0.2.0
-ipywidgets==6.0.0
-itsdangerous==1.1.0
-Jinja2==2.10
-jsonschema==2.6.0
-jupyter-client==5.2.2
-jupyter-core==4.4.0
-keyring==10.6.0
-keyrings.alt==3.0
-language-selector==0.1
-launchpadlib==1.10.6
-lazr.restfulclient==0.13.5
-lazr.uri==1.0.3
-louis==3.5.0
-macaroonbakery==1.1.3
-Mako==1.0.7
-MarkupSafe==1.0
-marshmallow==2.18.0
-mistune==0.8.3
-nbconvert==5.3.1
-nbformat==4.4.0
-netifaces==0.10.4
-notebook==5.2.2
+gunicorn==19.9.0
+h5py==2.9.0
 numpy==1.16.1
-oauth==1.0.1
-olefile==0.45.1
-pandocfilters==1.4.2
-pathlib2==2.3.3
-pexpect==4.2.1
-pickleshare==0.7.4
-Pillow==5.1.0
-prompt-toolkit==1.0.15
-protobuf==3.0.0
-pycairo==1.16.2
-pycrypto==2.6.1
-pycups==1.9.73
-Pygments==2.2.0
-pygobject==3.26.1
-pymacaroons==0.13.0
-PyNaCl==1.1.2
-pyRFC3339==1.0
-python-apt==1.6.3+ubuntu1
-python-dateutil==2.6.1
-python-debian==0.1.32
-pytz==2018.9
-pyxdg==0.25
-PyYAML==3.13
-pyzmq==16.0.2
-raven==6.10.0
-reportlab==3.4.0
+pandas==0.24.0
+Pillow==5.4.1
+regex==2018.1.10
 requests==2.21.0
 requests-toolbelt==0.9.1
 requests-unixsocket==0.1.5
 scikit-learn==0.20.2
-scipy==1.2.1
-SecretStorage==2.3.1
-simplegeneric==0.8.1
+scipy==1.2.0
 simplejson==3.13.2
-six==1.12.0
 sklearn==0.0
-system-service==0.3
-systemd-python==234
-tabulate==0.8.3
-terminado==0.7
-testpath==0.3.1
-tornado==4.5.3
-traitlets==4.3.2
-ubuntu-drivers-common==0.0.0
-ufw==0.35
-unattended-upgrades==0.1
+tensorboard==1.12.2
+tensorflow==1.12.0
 urllib3==1.24.1
-usb-creator==0.3.3
 virtualenv==15.1.0
-wadllib==1.3.2
-wcwidth==0.1.7
-webencodings==0.5
-Werkzeug==0.14.1
-xdiagnose==3.8.8
-xkit==0.0.0
-zope.interface==4.3.2
